# tec-sync

./: Cargo.toml
tec-sync/: Cargo.toml
tec-sync/src/: main.rs
