[package]
name = "tec-sync"
version = "0.1.0"
authors = ["SoRA_X7 <x7@warp-d.com>", "MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

[dependencies]
named_pipe = "0.4.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.winapi]
version = "0.3.8"
features = [
    "impl-default",
    "psapi",
    "processthreadsapi",
    "winnt",
    "handleapi",
    "memoryapi",
    "debugapi",
    "winbase",
    "minwinbase",
    "errhandlingapi"
]
